--- a/style/game.css
+++ b/style/game.css
@@ -1,6 +1,4 @@
-.tabella{
-    padding-left: 30%;
-    padding-right: 30%;
+.tabella {
     text-align: center;
 }
 
@@ -14,7 +12,7 @@
     border-radius: 3px;
 }
 
-.clues{
+.clues {
     text-align: center;
     position: inherit;
     margin: auto;
@@ -23,7 +21,27 @@
     border-radius: 3px;
 }
 
-.input-group{
-    padding-right: 25%;
-    padding-left: 25%;
+table {
+    border-collapse: collapse;
+    width: 100%;
 }
+
+th,
+td {
+    text-align: left;
+    padding: 8px;
+    border-bottom: 1px solid #ddd;
+}
+
+th {
+    background-color: #f2f2f2;
+}
+
+.table-responsive {
+    overflow-x: auto;
+}
+
+tbody tr:hover {
+    background-color: #ddd;
+}
+
